--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_riverpod: ^2.4.9
   flutter_animate: ^4.5.0
   go_router: ^16.2.4
+  http: ^1.5.0
 
 dev_dependencies:
   flutter_test:
